[gd_scene load_steps=4 format=3 uid="uid://2g4a5r0am4g1"]

[ext_resource type="Texture2D" uid="uid://r3xfadmnd5e" path="res://graphics/projectiles/blue.png" id="1_02jhs"]
[ext_resource type="Script" path="res://scenes/laser/laser.gd" id="1_t0oav"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k2m8t"]
radius = 6.0
height = 86.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_t0oav")
speed = 1315

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 35)
texture = ExtResource("1_02jhs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_k2m8t")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
